tests/error/pointer_subscript_non_int.vbc
int main() {
    int arr[2] = {1, 2};
    int* p = arr;
    return p[1.5];
}
